# Minimal-UART-Emulator

./: CMakeLists.txt  Component.cpp  Component.h  IComponent.h  README.md  main.cpp  uart.h
